chore(package and lint): update dev dependencies

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,41 +1,1 @@
-env:
-  es6: true
-  node: true
-extends: 'eslint:recommended'
-rules:
-  brace-style:
-    - error
-    - 1tbs
-  camelcase: error
-  comma-spacing:
-    - error
-    - after: true
-      before: false
-  comma-style: error
-  eol-last: error
-  eqeqeq: error
-  indent:
-    - error
-    - 4
-    - SwitchCase: 1
-  key-spacing: error
-  keyword-spacing: error
-  new-parens: error
-  quotes:
-    - error
-    - single
-  semi: error
-  semi-spacing:
-    - error
-    - after: true
-      before: false
-  space-before-blocks: error
-  space-before-function-paren:
-    - error
-    - anonymous: always
-      named: never
-  space-in-parens:
-    - error
-    - never
-  space-infix-ops: error
-  space-unary-ops: error
+extends: 'eslint-config-cheminfo'
