--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
   },
   "homepage": "https://github.com/mljs/decision-tree-cart",
   "devDependencies": {
-    "eslint": "^3.10.2",
-    "mocha": "^3.1.2",
+    "eslint": "^3.1.0",
+    "eslint-config-cheminfo": "^1.0.0",
+    "eslint-plugin-no-only-tests": "^1.1.0",
+    "ml-dataset-iris": "^1.0.0",
+    "mocha": "^2.5.3",
     "mocha-better-spec-reporter": "^3.0.2",
-    "should": "^11.1.1"
+    "should": "^10.0.0"
   },
   "dependencies": {
     "ml-dataset-iris": "^1.0.0",
