--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mljs/bit-array"
+    "url": "https://github.com/mljs/decision-tree-cart"
   },
   "keywords": [
     "CART",
