--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "scripts": {
     "eslint": "eslint src",
     "eslint-fix": "npm run eslint -- --fix",
-    "test": "npm run test-mocha && npm run eslint",
-    "test-mocha": "mocha --require should --reporter mocha-better-spec-reporter"
+    "prepublish": "rollup -c",
+    "test": "run-s testonly eslint",
+    "testonly": "jest"
   },
   "repository": {
     "type": "git",
@@ -35,16 +36,17 @@
   },
   "homepage": "https://github.com/mljs/decision-tree-cart",
   "devDependencies": {
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "eslint": "^3.1.0",
     "eslint-config-cheminfo": "^1.0.0",
     "eslint-plugin-no-only-tests": "^1.1.0",
     "ml-dataset-iris": "^1.0.0",
-    "mocha": "^2.5.3",
-    "mocha-better-spec-reporter": "^3.0.2",
-    "should": "^10.0.0"
+    "npm-run-all": "^4.0.2",
+    "rollup": "^0.43.0",
+    "jest": "^20.0.4"
   },
   "dependencies": {
     "ml-dataset-iris": "^1.0.0",
-    "ml-matrix": "^2.1.0"
+    "ml-matrix": "^3.0.0"
   }
 }
