--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest": "^20.0.4"
   },
   "dependencies": {
+    "ml-array-mean": "^1.0.0",
     "ml-dataset-iris": "^1.0.0",
     "ml-matrix": "^3.0.0"
   }
