--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "ml-cart",
   "version": "1.0.8",
   "description": "CART decision tree algorithm",
-  "main": "lib/index.js",
+  "main": "cart.js",
   "module": "src/index.js",
   "files": [
-    "lib",
-    "src"
+    "src",
+    "cart.js"
   ],
   "scripts": {
+    "compile": "rollup -c",
     "eslint": "eslint src",
     "eslint-fix": "npm run eslint -- --fix",
-    "prepublish": "rollup -c",
-    "test": "run-s testonly eslint",
-    "testonly": "jest"
+    "prepublishOnly": "npm run compile",
+    "test": "run-s test-coverage eslint",
+    "test-only": "jest",
+    "test-coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -37,17 +39,18 @@
   },
   "homepage": "https://github.com/mljs/decision-tree-cart",
   "devDependencies": {
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
-    "eslint": "^3.1.0",
-    "eslint-config-cheminfo": "^1.0.0",
-    "eslint-plugin-no-only-tests": "^1.1.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "eslint": "^4.19.1",
+    "eslint-config-cheminfo": "^1.17.3",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jest": "^21.15.1",
+    "jest": "^22.4.3",
     "ml-dataset-iris": "^1.0.0",
-    "npm-run-all": "^4.0.2",
-    "rollup": "^0.43.0",
-    "jest": "^20.0.4"
+    "npm-run-all": "^4.1.3",
+    "rollup": "^0.58.2"
   },
   "dependencies": {
-    "ml-array-mean": "^1.0.0",
-    "ml-matrix": "^5.0.0"
+    "ml-array-mean": "^1.0.1",
+    "ml-matrix": "^5.1.1"
   }
 }
