--- a/package.json
+++ b/package.json
@@ -39,19 +39,23 @@
   },
   "homepage": "https://github.com/mljs/decision-tree-cart",
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.6.0",
-    "eslint": "^6.5.1",
-    "eslint-config-cheminfo": "^2.0.3",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.19.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "jest": "^24.9.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
+    "eslint": "^7.11.0",
+    "eslint-config-cheminfo": "^5.2.2",
+    "jest": "^26.5.3",
     "ml-dataset-iris": "^1.1.1",
-    "prettier": "^1.18.2",
-    "rollup": "^1.23.1"
+    "prettier": "^2.1.2",
+    "rollup": "^2.32.0"
   },
   "dependencies": {
-    "ml-array-mean": "^1.1.2",
-    "ml-matrix": "^6.4.1"
+    "ml-array-mean": "^1.1.4",
+    "ml-matrix": "^6.5.3"
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "semi": true,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "all"
   }
 }
