--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "homepage": "https://github.com/mljs/decision-tree-cart",
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.16.8",
+    "@types/jest": "^27.4.0",
     "eslint": "^8.6.0",
     "eslint-config-cheminfo": "^7.2.1",
     "jest": "^27.4.7",
